# Mixer

./: .gitignore  CMakeLists.txt  fixtures.h  main.cpp
include/DMX/: FixtureGroup.h  Group.h  Universe.h
include/DMX/Fixture/: Fixture.h
include/DMX/Fixture/Parameters/: Parameters.h
include/DMX/Output/: SacnSender.h
include/Effect/: EffectHolder.h
include/Engine/: Engine.h  FixtureLibrary.h
include/Engine/Components/: DMXOutput.h  FixtureLibrary.h  GroupManager.h  Patch.h
lib/: CMakeLists.txt
lib/include/DMX/: Presets.h
lib/include/DMXInput/: sACN.h  sACN_manager.h
lib/include/DMXOutput/: Outputable.h
lib/include/Fixture/: Fixture.h  Fixture1D.h  Fixture2D.h
lib/include/Traits/: Connectable.h  Printable.h
lib/src/DMX/: DMXInfo.cpp  DMXInfo.h  Preset.cpp  Preset.h  Presets.cpp
lib/src/DMXInput/: sACN.cpp
src/: main.cpp
src/DMX/: FixtureGroup.cpp  FixtureGroup.h  Universe.cpp  Universe.h
src/DMX/Fixture/: Fixture.cpp
src/DMX/Fixture/Parameters/: ColorParameter.h  DimmerParameter.h  Parameter.cpp  Parameter.h  PositionParameter.h  VDimmerParameter.h
src/DMX/Output/: SacnSender.cpp
src/Effect/: Curve.cpp  Curve.h  Effect.h  EffectHolder.h
src/Engine/: EffectEngine.h  Engine.cpp  Programmer.h
src/Engine/Components/: DMXOutput.cpp  FixtureLibrary.cpp  GroupManager.cpp  Patch.cpp
src/Helper/: Colors.cpp  Colors.h  Curve.cpp  Curve.h  FragmentedStorage.h  NetworkUtils.cpp  NetworkUtils.h  Printable.h  Utils.cpp  Utils.h  old_FragmentedStorage.h
src/Traits/: Serialize.h
